<resources>
    <string name="app_name">mappe2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="action_item_contacts">Contacts</string>
    <string name="action_item_edit">Edit</string>
    <string name="action_item_calendar">Calendar</string>
    <string name="action_item_settings">Settings</string>
    <string name="message_title">Message to be sent:</string>
    <string name="save">Save</string>
    <string name="contacts">Contacts</string>
    <string name="new_contact_toast">New contact created.</string>
    <string name="select_date">Select Date</string>

<!-- For contact creation-->
    <string name="contact_name">Name:</string>
    <string name="contact_bday">Birthday:</string>
    <string name="contact_phone">Phone number:</string>
    <string name="contact_message">Custom message:</string>

    <!--new message -->
    <string name="settime">Set time:</string>

    <!-- -->

    <string name="delete">Delete</string>
    <string name="languagequestion">Choose Language: </string>
    <string name="changelanguage">Change Language!</string>
    <string name="language">Norwegian</string>
    <string name="ikkeok">Back</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>





</resources>
