<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_name"
        style="@style/WhiteText"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/edit_name"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:background="@drawable/border"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        style="@style/WhiteText"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/datelayout"
        android:background="@drawable/border">


    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/edit_birthday"
        android:editable="false"
       />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/edit_time_button"
        android:background="@drawable/calendar"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_phone"
        style="@style/WhiteText"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/edit_number"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:background="@drawable/border"/>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_message"
        style="@style/WhiteText"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/edit_message"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:background="@drawable/border"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_button"
        android:text="@string/action_item_edit"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete_button"
        android:text="@string/delete"/>

</LinearLayout>