<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_title"
        style="@style/WhiteText"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/standardmessage"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:background="@drawable/border"/>

   <!-- <TimePicker
    style="@style/CustomStyle"    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datepicker"
        android:layout_gravity="center"
        style="@style/WhiteText">
    </TimePicker>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settime"
        style="@style/WhiteText"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/timelayout"
        android:background="@drawable/border">

    <EditText
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:editable="false"
        />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/choosetime"
        android:text="time"
        android:background="@drawable/clock"/>
        </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/savestandardsessage"
        android:text="@string/save"
        />




</LinearLayout>